tests/compile-errors/ce-ref-type-prop.valk

class X {
    test: &[u8 x 10] (@undefined)
}
fn main() {
    let x = X{}
}

